--- a/src/app/modules/todo/components/todoList.html
+++ b/src/app/modules/todo/components/todoList.html
@@ -2,7 +2,7 @@
 	<header id="header">
 		<h1>todos</h1>
 		<form id="todo-form" ng-submit="$ctrl.addTodo()">
-			<input id="new-todo" placeholder="What needs to be done?" ng-model="$ctrl.todoTitle"
+			<input id="new-todo" placeholder="What needs to be done?" ng-model="$ctrl.newTodo.title"
 				   ng-disabled="$ctrl.saving" autofocus>
 		</form>
 	</header>
