--- a/src/app/modules/todo/components/todoList.html
+++ b/src/app/modules/todo/components/todoList.html
@@ -3,7 +3,7 @@
 		   ng-click="$ctrl.markAll($ctrl.allChecked)">
 	<label for="toggle-all">Mark all as complete</label>
 	<ul id="todo-list">
-		<li ng-repeat="todo in $ctrl.todos | filter:$ctrl.statusFilter track by $index"
+		<li ng-repeat="todo in $ctrl.filteredTodos track by $index"
 			ng-class="{completed: todo.completed, editing: todo == $ctrl.editedTodo}">
 			<div class="view">
 				<input class="toggle" title="Toggle" type="checkbox" ng-model="todo.completed"
