--- a/src/app/modules/todo/components/addTodo.html
+++ b/src/app/modules/todo/components/addTodo.html
@@ -1,4 +1,4 @@
 <form id="todo-form" ng-submit="$ctrl.addTodo()">
 	<input id="new-todo" placeholder="What needs to be done?" ng-model="$ctrl.newTodo.title"
-		   ng-disabled="$ctrl.saving" autofocus>
+		   ng-disabled="$ctrl.saving" name="newTodo" autofocus>
 </form>
